src/styles/components/carousel.scss
@import "../__variables.scss";

.carousel-component-container {
    height: 100%
}

.scroll-carousel-component-container {
    display: flex;
    height: 100%;
    width: 100%;
    overflow: hidden;
    background: $light-grey;
    
    .scrollbar-mask {
        display: flex;
        height: 100%;
        width: 100%;
        overflow-x: scroll;
        
        &::-webkit-scrollbar {
            display: none;
        }
        
        @media #{$desktop} {
            &:after {
                content: '';
                padding-left: 39%;
            }
        }
    }
    
    img {
        object-fit: cover;
        height: 100%;
        min-width: 100vh;
    }
}

.snap-carousel-component-container {
    height: 100%;
    width: 100%;
    overflow: hidden;
    
    .slider, .slider-frame, .slider-list, .slider-slide {
        height: 100% !important;
    }
    
    .slider-decorator-0, .slider-decorator-1 {
        display: none;
    }
    
    button {
        color: white !important;
    }

    .image-container {
        height: 100%;
        width: 100%;
        
        img {
            object-fit: cover;
            height: 100%;
            width: 100%;
        }
    }
}

